Fixing #52.
